tests/negative/neg_pr116_legacy_begin.safe
package Neg_PR116_Legacy_Begin

   function Broken returns Integer

      begin
         return 1;
